@@ -16,7 +16,7 @@ with qw(
   Dist::Zilla::Role::PluginBundle::Easy
 );
 
-sub mvp_multivalue_args { return qw(stopwords travis_ci_ignore_perl) }
+sub mvp_multivalue_args { return qw(skip_file stopwords travis_ci_ignore_perl) }
 
 has set_script_shebang => (
     is      => 'ro',
@@ -24,6 +24,15 @@ has set_script_shebang => (
     lazy    => 1,
     default => sub {
         exists $_[0]->payload->{set_script_shebang} ? $_[0]->payload->{set_script_shebang} : 1;
+    },
+);
+
+has skip_file => (
+    is      => 'ro',
+    isa     => 'Maybe[ArrayRef]',
+    lazy    => 1,
+    default => sub {
+        exists $_[0]->payload->{skip_file} ? $_[0]->payload->{skip_file} : undef;
     },
 );
 
@@ -102,6 +111,7 @@ sub configure {
             {
                 stopwords             => $self->stopwords,
                 travis_ci_ignore_perl => $self->travis_ci_ignore_perl,
+                skip_file             => $self->skip_file,
             }
         ],
 
@@ -394,6 +404,10 @@ following options:
 =item *
 
 C<set_script_shebang> - this indicates whether C<SetScriptShebang> should be used or not
+
+=item *
+
+C<skip_file> - passed through to the C<Author::SKIRMESS::RepositoryBase> plugin
 
 =item *
 
